# rust-sdl-ui

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/widget-demo/: main.rs
src/: desktop.rs  gamepad.rs  lib.rs  sdl.rs  texcache.rs  ui.rs  utils.rs  vec.rs  video.rs
src/gfx/: color.rs  mod.rs  texcache.rs
